Bugfix: Added headline style only to headline components; not to classes (unexpected behaviour with parent elements)

--- a/contao/templates/component/_headline.html.twig
+++ b/contao/templates/component/_headline.html.twig
@@ -1,7 +1,7 @@
 {% use '@Contao/component/_headline.html.twig' %}
 
 {% block headline_component %}
-    {% set headline = headline|merge({
+    {% set headline = headline|default(_context)|merge({
         'attributes': attrs()
             .addClass(data.headlineStyle|default)
             .mergeWith(headline.attributes|default)
