--- a/contao/templates/content_element/editor_note.html.twig
+++ b/contao/templates/content_element/editor_note.html.twig
@@ -1,4 +1,4 @@
-{% extends contao.has_backend_user ? "@Contao/content_element/_base.html.twig" : "@Contao/content_element/_empty.html.twig" %}
+{% extends "@Contao/content_element/_base.html.twig" %}
 
 {% block content %}
     {{ note|encode_email|raw }}
